Fixed a line height issue if images aren't linked
When creating a gallery, the option to leave images unlinked was
causing some extra space bellow the images due to the line height being
set. This should prevent any extra space from displaying.

--- a/assets/flagship/scss/partials/defaults/_media.scss
+++ b/assets/flagship/scss/partials/defaults/_media.scss
@@ -32,6 +32,7 @@ a:focus img {
 }
 
 .gallery-item {
+	line-height: 0;
 	list-style: none;
 	margin: 0 0 2.35765%;
 	overflow: hidden;
@@ -111,6 +112,7 @@ a:focus img {
 		background: transparentize($gallery-caption-background-color, 0.5);
 		color: $gallery-caption-font-color;
 		font-size: $gallery-caption-font-size;
+		line-height: 1.65;
 		max-height: 50%;
 		opacity: 0;
 		overflow: hidden;
